@@ -61,6 +61,10 @@ covarianceColl = Point(var)
 theoricalVariance = Point(sampleSize)
 assert_almost_equal(covarianceColl, theoricalVariance, 1e-14, 1e-14)
 
+# Variance per marginal
+var = result.getConditionalMarginalVariance(X)
+assert_almost_equal(var, Point(sampleSize), 1e-14, 1e-14)
+
 # Test 2
 
 # Kriging use case
@@ -122,6 +126,10 @@ var = [mat[0,0] for mat in coll]
 covarianceColl = Point(var)
 theoricalVariance = Point(len(var))
 assert_almost_equal(covarianceColl, theoricalVariance, 1e-14, 1e-14)
+
+# Variance per marginal
+var = result.getConditionalMarginalVariance(inputSample)
+assert_almost_equal(var, Point(len(inputSample)), 1e-14, 1e-14)
 
 # Estimation
 # rtol & a tol fixed to 1e-1
