@@ -44,6 +44,7 @@
  * Deprecated GumbelAB
  * Deprecated GaussianNonLinearCalibration,NonLinearLeastSquaresCalibration::set,getAlgorithm
  * Added getConditionalMarginalCovariance method to KrigingResult
+ * Added getConditionalMarginalVariance method to KrigingResult
 
 === Python module ===
  * Add Domain.__contains__ operator
